AP-2009-02-18-0: Bugfix:     arco_compile fix
                 Belongs to: AP-2009-02-11-0

RD-2009-02-18-0: Bugfix:     adjusted jemalloc test
                 Review:     JG

CR-2009-02-17-0: Bugfix:     improved race condition in test "issue_2735"
                             to recognize the issue always
                 Review:     RD

CR-2009-02-16-1: Cleanup:    cleanup of test "issue_2743"
                 Review:     RD

CR-2009-02-16-0: Enhancem.:  o wait_for_load_from_all_queues():
                               new default parameter: raise_error
                             o host_conf_get_suited_hosts():
                               new default parameter: exclude_qmaster

CR-2009-02-13-0: Bugfix:     "shadowd_migrate" test: Fixed wrong parameter
                             sequence order in wait_for_remote_file() call in
                             "shadowd_migrate" test
                 Review:     AF

LP-2009-02-12-0: Enhancem.:  Enhanced "smf" test to detect that shadowds are not
                             running (no no_local_spool) and skips shadowd smf
                 Review:     ZG

AP-2009-02-11-0: Bugfix:     - fixed arco tests, host_alias_file test
                             - moved qrsh_output_contains procedure to the testsuite
                               framework directory
                 Review:     DG

DG-2009-02-11-0: Bugfix:     drmaa_redirect_lib problems on filesystems 
                             where root is mapped against nobody. 
                 Review:     CR

RD-2009-02-11-0: Enhancem.:  added jemalloc test
                 Review:     JG

CR-2009-02-11-0: Enhancem.:  Enhanced "shadowd_migrate" test to detect that
                             a shadowd is not running anymore.
                 Review:     MD

JG-2009-02-11-0: Enhamcem.:  improve handling of slow nfs in tight_integration
                             test
                 Review:     RD

AF-2009-02-09-0: Enhancem.:  New test for issue 612