@@ -1,3 +1,6 @@
+RM-2009-02-18-0: Enhancem.:  test for issue 619
+                 Review:     MG
+
 AP-2009-02-18-0: Bugfix:     arco_compile fix
                  Belongs to: AP-2009-02-11-0
 
